--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "autonumeric": "^1.9.46",
     "autoprefixer": "^6.3.6",
     "babel-polyfill": "^6.16.0",
+    "bootstrap": "^3.3.6",
     "eslint": "^3.7.1",
     "jquery": "^3.1.1",
     "mobx": "^2.6.0",
@@ -68,15 +69,15 @@
     "moment": "^2.15.1",
     "numeral": "^1.5.3",
     "precss": "^1.4.0",
-    "react": "15.3.0",
+    "react": "^15.3.0",
     "react-addons-shallow-compare": "15.3.0",
-    "react-bootstrap": "^0.30.5",
-    "react-dom": "15.3.0",
+    "react-bootstrap": "^0.30.8",
+    "react-currency-input": "^1.2.6",
+    "react-dom": "^15.3.0",
     "react-motion": "^0.4.4",
     "react-router": "^2.0.0",
-    "webpack": "^1.12.14",
-    "whatwg-fetch": "1.0.0",
     "react-tap-event-plugin": "1.0.0",
-    "bootstrap": "^3.3.6"
+    "webpack": "^1.12.14",
+    "whatwg-fetch": "1.0.0"
   }
 }
